@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.150 2007-10-22 23:38:56 cmatsuoka Exp $
+$Id: ChangeLog,v 1.151 2007-10-23 00:21:51 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -41,6 +41,8 @@ Stable versions
 	- fixed load of DBM 16-bit samples (reported by Ralf Hoffmann)
 	- fixed DBM envelope offset error (reported by Ralf Hoffmann)
 	- disabled AMF volslide effect (problems with CannonFodder2-Done.AMF)
+	- fixed MMD1/MMD3 loaders to skip invalid synth instruments (reported
+	  by Ralf Hoffmann, Misanthropy.MED loads correctly)
 
 2.3.2 (20071009):
 	- added ModPlug Tracker IT quirk: ignore sample global volume (fixes
